<resources>

    <string name="app_name">AllWeather</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5053914526798733/4551790409</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="intro_title_1">Welcome</string>
    <string name="intro_title_2">Location</string>
    <string name="intro_title_3">Let\'s start</string>
    <string name="intro_description_1"> Thanks for choosing me\n I hope to satisfy your applications</string>
    <string name="intro_description_2"> Make sure you have geolocation enabled to improve the information</string>
    <string name="intro_description_3"> I\'m ready to show the information</string>
    <string name="intro_description_permission_2"> I need to access your location to improve the information</string>

    <string name="activity_dialog">Loading...</string>

    <string name="action_my_places">My places</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>

    <string name="first_category">Units</string>

    <string name="pref_temperature">Temperature</string>
    <string-array name="temperature_unit">
        <item>Celsius (C)</item>
        <item>Fahrenheit (F)</item>
        <item>Kelvin (K)</item>
    </string-array>
    <string-array name="temperature_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_speed">Speed</string>
    <string-array name="speed_unit">
        <item>Miles per hour (Mph)</item>
        <item>Kilometer per hour (Km/h)</item>
        <item>Meter per second (M/s)</item>
    </string-array>
    <string-array name="speed_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_time">Time</string>
    <string-array name="time_unit">
        <item>0-12</item>
        <item>0-24</item>
    </string-array>
    <string-array name="time_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="system_unit">
        <item>Metric (°C, m/s)</item>
        <item>Imprerial (°F, mhp)</item>
    </string-array>
    <string-array name="system_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="second_category">General</string>
    <string name="pref_theme">Theme</string>
    <string-array name="theme_unit">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="use_geolocation_title">Improve location</string>
    <string name="use_geolocation_summary">Using gps to improve the position</string>

    <string name="provider">Weather provider</string>
    <string-array name="provider_unit">
        <item>ForecastIO</item>
        <!--<item>Apixu</item>-->
    </string-array>
    <string-array name="provider_value">
        <item>ForecastIO</item>
        <!--<item>Apixu</item>-->
    </string-array>

    <string name="key_pref_temperature" translatable="false">temperature</string>
    <string name="key_pref_speed" translatable="false">speed</string>
    <string name="key_pref_time" translatable="false">time</string>
    <string name="key_pref_theme" translatable="false">theme</string>
    <string name="key_pref_provider" translatable="false">provider</string>


    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wendnesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Dicember</item>
    </string-array>

    <string name="hint_search_view">Search place</string>

    <string name="snackbar_1">I don\'t have access to the location\nWould you like to give me permission?</string>
    <string name="snackbar_2">Geolocation is not active\nDo you want to activate it?</string>
    <string name="snackbar_3">No internet connection</string>
    <string name="snackbar_4">Unable to retrieve the position</string>
    <string name="snackbar_5">You will not be able to recover the data</string>
    <string name="snackbar_6">Cannot contact the server at this time</string>
    <string name="snackbar_7">Data has already been updated</string>
    <string name="snackbar_action_OK">OK</string>
    <string name="snackbar_action_retry">RETRY</string>


    <string name="temperature_label">Temperature:</string>
    <string name="wind_label">Wind:</string>
    <string name="humidity_laber">Humidity:</string>
    <string name="sunrise_label">Sunrise:</string>
    <string name="sunset_label">Sunset:</string>
    <string name="temperature" translatable="false">%1$s°</string>
    <string name="wind" translatable="false">%1$s %2$s</string>
    <string name="humidity" translatable="false">%1$s%%</string>

    <string name="dialog_preference_theme">Reboot application for apply changes</string>
    <string name="dialog_action_reboot">OK</string>
    <string name="dialog_action_cancel">Cancel</string>


    <string-array name="weather_condition">
        <item>Clear</item>
        <item>Partly Cloudy</item>
        <item>Cloudy</item>
        <item>Overcast</item>
        <item>Mist</item>
        <item>Patchy rain nearby</item>
        <item>Patchy snow nearby</item>
        <item>Patchy sleet nearby</item>
        <item>Patchy freezing drizzle nearby</item>
        <item>Thundery outbreaks in nearby</item>
        <item>Blowing snow</item>
        <item>Blizzard</item>
        <item>Fog</item>
        <item>Freezing fog</item>
        <item>Patchy light drizzle</item>
        <item>Light drizzle</item>
        <item>Freezing drizzle</item>
        <item>Heavy freezing drizzle</item>
        <item>Patchy light rain</item>
        <item>Light rain</item>
        <item>Moderate rain at times</item>
        <item>Moderate rain</item>
        <item>Heavy rain at times</item>
        <item>Heavy rain</item>
        <item>Light freezing rain</item>
        <item>Moderate or heavy freezing rain</item>
        <item>Light sleet</item>
        <item>Moderate or heavy sleet</item>
        <item>Patchy light snow</item>
        <item>Light snow</item>
        <item>Patchy moderate snow</item>
        <item>Moderate snow</item>
        <item>Patchy heavy snow</item>
        <item>Heavy snow</item>
        <item>Ice pellets</item>
        <item>Light rain shower</item>
        <item>Moderate or heavy rain shower</item>
        <item>Torrential rain shower</item>
        <item>Light sleet showers</item>
        <item>Moderate or heavy sleet showers</item>
        <item>Light snow showers</item>
        <item>Moderate or heavy snow showers</item>
        <item>Light showers of ice pellets</item>
        <item>Moderate or heavy showers of ice pellets</item>
        <item>Patchy light rain in area with thunder</item>
        <item>Moderate or heavy rain in area with thunder</item>
        <item>Patchy light snow in area with thunder</item>
        <item>Moderate or heavy snow in area with thunder</item>
    </string-array>

</resources>
