<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/first_category">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/temperature_unit"
            android:entryValues="@array/temperature_value"
            android:key="@string/pref_temperature"
            android:title="@string/pref_temperature"/>

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/speed_unit"
            android:entryValues="@array/speed_value"
            android:key="@string/pref_speed"
            android:title="@string/pref_speed"/>

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/time_unit"
            android:entryValues="@array/time_value"
            android:key="@string/pref_time"
            android:title="@string/pref_time"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="aaa">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/theme_unit"
            android:entryValues="@array/theme_value"
            android:key="themeUnit"
            android:title="@string/theme"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_geolocation"
            android:summary="@string/use_geolocation_summary"
            android:title="@string/use_geolocation_title"/>

        <ListPreference
            android:defaultValue="ForecastIO"
            android:entries="@array/provider_unit"
            android:entryValues="@array/provider_value"
            android:key="pref_provider"
            android:title="@string/provider"/>

    </PreferenceCategory>


</PreferenceScreen>