<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_places"
            android:icon="@drawable/ic_location_city_24dp"
            android:title="@string/action_my_places"/>
    </group>


    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/drawer_item_credits"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/action_credits"/>

    </group>

</menu>
